# hust-LangFormatTool

./: CMakeLists.txt  README.md
src/: main.cpp
src/formatter/: CMakeLists.txt  formatter.cpp  formatter.h
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  token.h  token_translater.h
src/parser/: CMakeLists.txt  README.md  ast.h  ast_display.cpp  llparse_expr.cpp  llparse_func.cpp  llparse_stmt.cpp  llparse_stmt_detail.cpp  llparse_top.cpp  llparse_type_spec.cpp  llparse_var.cpp  parser.cpp  parser.h  translater.h
test/: test_lex.c
